# inkbird-ble

./: .all-contributorsrc  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  supported_devices.md  usage.md
src/inkbird_ble/: __init__.py  parser.py
tests/: __init__.py  test_ibt_4wb.py  test_idt_34c_b.py  test_main.py  test_parser.py
