[project]
name = "inkbird-ble"
version = "1.5.2"
description = "Parser for INKBIRD BLE devices"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Repository" = "https://github.com/bluetooth-devices/inkbird-ble"
"Documentation" = "https://inkbird-ble.readthedocs.io"
"Bug Tracker" = "https://github.com/bluetooth-devices/inkbird-ble/issues"
"Changelog" = "https://github.com/bluetooth-devices/inkbird-ble/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "inkbird_ble", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

# Documentation Dependencies
Sphinx = {version = ">=9.0.4,<10", optional = true}
sphinx-rtd-theme = {version = ">=1,<4", optional = true}
myst-parser = {version = ">=5.1.0,<5.2", optional = true}
bluetooth-sensor-state-data = ">=1.8.0"
habluetooth = {version = ">=6.8.3", python = ">=3.11,<3.15"}
sensor-state-data = ">=2.2.0"
bluetooth-data-tools = ">=1.28.0"
bleak-retry-connector = ">=1.20.0"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/inkbird_ble/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=inkbird_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["inkbird_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "ASYNC", # async rules
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EM",  # flake8-errmsg
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F",   # pyflake
    "FA",  # flake8-future-annotations
    "FIX", # flake8-fixme
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "NPY", # numpy-specific rules
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-pathlib
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff specific
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TC", # flake8-type-checking
    "TD",  # flake8-todos
    "TID", # Tidy imports
    "TRY", # tryceratops
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    "ANN401",   # any-type: Any is sometimes the correct type
    "ASYNC109", # timeout parameters are part of the public async API
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D104",     # undocumented-public-package
    "D105",     # undocumented-magic-method
    "D106",     # undocumented-public-nested-class
    "D107",     # undocumented-public-init
    "D203",     # incorrect-blank-line-before-class (incompatible with D211)
    "D213",     # multi-line-summary-second-line (incompatible with D212)
]


[tool.ruff.lint.per-file-ignores]
# Sphinx-generated config: `copyright` shadows a builtin by convention,
# template imports are left commented, and the docs tree has no __init__.py.
"docs/source/conf.py" = ["A001", "ERA001", "INP001"]
"tests/**/*" = [
    "ANN",     # test functions need not be annotated
    "ARG",     # pytest fixtures are requested for side effects, not values
    "D",       # test names are self-documenting; docstring rules add noise
    "N802",    # test names embed device model identifiers (e.g. test_IBS_TH)
    "PLR0915",
    "PLR2004",
    "S101",
]
